# LibTesix

./: .clang-format  .gitignore  CMakeLists.txt  README.md  file.txt  tmp.txt
Examples/: CMakeLists.txt
Examples/bouncing_box/: CMakeLists.txt  bouncing_box.cpp  window.json
examples/bouncing_box/: overlay.json
include/: Drawer.hpp  Json.h  LibTesix.h  LibTesix.hpp  LibTesixTui.h  NonContStyledString.hpp  Overlay.h  Screen.h  SegmentArray.h  Style.h  Style.hpp  StyledSegmentString.h  StyledSegmentString.hpp  StyledString.h  StyledString.hpp  Terminal.h  Terminal.hpp  Window.h  Window.hpp
include/Helpers/: Generic.hpp  NonContStyledString.hpp  StyledSegmentString.hpp  StyledString.hpp
src/: Json.cpp  NonContStyledString.cpp  Overlay.cpp  Screen.cpp  SegmentArray.cpp  Style.cpp  StyledSegmentString.cpp  StyledString.cpp  Terminal.cpp  Window.cpp
tests/: CMakeLists.txt  test.cpp
